--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,10 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+.gfm-embed {
+  min-width: 80vw;
+  min-height: 600px;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
