--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,17 @@ button:focus-visible {
   min-width: 80vw;
   min-height: 600px;
 }
+.statsMeter {
+  position: fixed;
+  display: flex;
+  min-width: 97vw;
+  
+  min-height: clamp(164px,260px, 13em);
+  bottom: .5em;
+  right: .5em;
+  background-color: blue;
+  z-index: 1000;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
