--- a/src/index.css
+++ b/src/index.css
@@ -56,13 +56,16 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 .gfm-embed {
+  display: flex;
   min-width: 80vw;
   min-height: 600px;
+  justify-content: center;
+  align-items: center;
 }
 .statsMeter {
   display: flex;
   width: 100%;
-  min-height: clamp(164px,260px, 13em);
+  min-height: 260px;
   user-select: none;
 }
 @media (prefers-color-scheme: light) {
@@ -75,5 +78,11 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+}
+
+@media only screen and (max-width:500px) {
+  .statsMeter {
+    min-height: 290px;
   }
 }
