--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,26 @@ button:focus-visible {
   margin: 0 auto 0 auto;
   user-select: none;
 }
+#content {
+  display: inline-flex;
+  flex-direction: row;
+  margin: 0;
+  max-width: 100vw;
+  overflow-x: hidden;
+  
+}
+
+/* Sidebar */
+#sidebar, #content > aside {
+  flex: 1;
+  width: 15%;
+}
+
+#mainContent {
+  flex: 4;
+  width: 85%;
+  padding-right: 1rem;
+}
 
 @media (prefers-color-scheme: light) {
   :root {
