feat: Resource Page - Navigation and pages

--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,11 @@ button:focus-visible {
   overflow-x: hidden;
   
 }
+#returnButton {
+  position: absolute;
+  top: 100px;
+  left: 130px;
+}
 
 /* Sidebar */
 #sidebar, #content > aside {
